--- a/pocket-hero/package.json
+++ b/pocket-hero/package.json
@@ -17,11 +17,13 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@nebular/auth": "^13.0.0",
     "@nebular/eva-icons": "^13.0.0",
     "@nebular/theme": "^13.0.0",
     "blk-design-system-angular": "^1.0.0",
     "bootstrap": "^5.3.3",
     "eva-icons": "^1.1.3",
+    "ngx-auth": "^6.0.0",
     "rxjs": "~7.8.0",
     "sass": "^1.77.4",
     "tslib": "^2.3.0",
